--- a/app/src/main/res/layout/activity_weather_record.xml
+++ b/app/src/main/res/layout/activity_weather_record.xml
@@ -21,20 +21,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/weather_record"
+        android:id="@+id/record_panel"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#00BCD4"
         android:gravity="center_horizontal"
 
-        android:text="textView"
+        android:paddingTop="200dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toTopOf="@+id/blockB"
         app:layout_constraintEnd_toStartOf="@+id/blockB"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/blockA"
         app:layout_constraintTop_toBottomOf="@+id/blockA"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/blockB"
@@ -49,5 +49,40 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/start_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textAlignment="textStart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toBottomOf="@+id/record_panel"
+        app:layout_constraintEnd_toEndOf="@+id/record_panel"
+        app:layout_constraintStart_toStartOf="@+id/record_panel"
+        app:layout_constraintTop_toTopOf="@+id/record_panel" />
+
+    <TextView
+        android:id="@+id/end_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textAlignment="textStart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="@+id/record_panel"
+        app:layout_constraintStart_toStartOf="@+id/record_panel"
+        app:layout_constraintTop_toBottomOf="@+id/start_time" />
+
+    <TextView
+        android:id="@+id/temperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textAlignment="textStart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="@+id/record_panel"
+        app:layout_constraintStart_toStartOf="@+id/record_panel"
+        app:layout_constraintTop_toBottomOf="@+id/end_time" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
